--- a/css/main.css
+++ b/css/main.css
@@ -99,39 +99,39 @@
   font-size: 1em;
 }
 
-/* line 85, main.sass */
-#sec1 #textSec1 {
+/* line 84, main.sass */
+#sec1 .textSec, #sec2 .textSec {
   margin-top: 10%;
   margin-left: 5%;
   margin-right: 5%;
   text-align: center;
 }
-/* line 90, main.sass */
-#sec1 #textSec1 h2 {
+/* line 89, main.sass */
+#sec1 .textSec h2, #sec2 .textSec h2 {
   font-size: 1.8em;
   font-family: Netto Offc;
   font-weight: bold;
   color: #0078AA;
 }
-/* line 95, main.sass */
-#sec1 #textSec1 h2 span {
+/* line 94, main.sass */
+#sec1 .textSec h2 span, #sec2 .textSec h2 span {
   color: #7AC943;
 }
-/* line 98, main.sass */
-#sec1 #textSec1 p {
+/* line 96, main.sass */
+#sec1 .textSec p, #sec2 .textSec p {
   text-align: center;
   line-height: 200%;
   color: #7f7f7f;
 }
-/* line 102, main.sass */
-#sec1 #imgSec1 {
+/* line 101, main.sass */
+#sec1 .imgSec, #sec2 .imgSec {
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 10%;
   position: relative;
 }
-/* line 107, main.sass */
-#sec1 #imgSec1 #ribbon {
+/* line 106, main.sass */
+#sec1 .imgSec #ribbon, #sec2 .imgSec #ribbon {
   position: absolute;
   max-width: 30%;
   height: auto;
@@ -139,87 +139,214 @@
   transform: translate(0px, -30px);
   transition: transform 0.5s ease-in;
 }
-/* line 116, main.sass */
-#sec1 #imgSec1 #omsMeat {
+/* line 115, main.sass */
+#sec1 #omsMeat, #sec2 #omsMeat {
   position: absolute;
 }
 
+/* line 118, main.sass */
+.spaced {
+  padding-top: 50%;
+}
+
+/* line 121, main.sass */
+img.food {
+  position: inline-block;
+  max-width: 50%;
+  height: auto;
+  opacity: 0;
+  transform: translateX(30px);
+  transition: all 0.4s ease-in-out;
+}
+/* line 128, main.sass */
+img.food.is-showing {
+  opacity: 1;
+  transform: translateX(0px);
+}
+
 @media screen and (min-width: 768px) {
-  /* line 122, main.sass */
+  /* line 133, main.sass */
   .navbar-default {
     background-color: transparent;
     height: 100px;
     border-bottom: none;
     outline: none;
+    padding-top: 50px;
+    margin-right: 20px;
   }
-  /* line 127, main.sass */
+  /* line 140, main.sass */
   .navbar-default .navbar-nav > li > a {
     color: white;
+    font-size: 1em;
   }
-  /* line 129, main.sass */
+  /* line 143, main.sass */
+  .navbar-default .navbar-nav > li > a.first {
+    border-top-left-radius: 20px;
+  }
+  /* line 145, main.sass */
+  .navbar-default .navbar-nav > li > a:hover {
+    box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.5);
+  }
+  /* line 147, main.sass */
+  .navbar-default .navbar-nav > li > a:active {
+    background-color: white;
+  }
+  /* line 150, main.sass */
   .navbar-default .navbar-nav > .active > a {
     background-image: none;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0);
+    box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.5);
   }
-  /* line 132, main.sass */
+  /* line 154, main.sass */
+  .navbar-default .navbar-nav > .active > a:hover {
+    background-color: white;
+  }
+  /* line 156, main.sass */
   .navbar-default .navbar-collapse {
     margin-top: 0px;
     background-color: transparent;
   }
-  /* line 135, main.sass */
+  /* line 160, main.sass */
   .navbar-default .navbar-brand {
+    margin-top: -20px;
     left: auto;
     height: 100px;
     margin-left: 0px;
     padding-left: 5%;
   }
+  /* line 166, main.sass */
+  .navbar-default .navbar-brand img {
+    height: 100%;
+    width: auto;
+    padding-left: 50px;
+  }
 
-  /* line 140, main.sass */
+  /* line 171, main.sass */
+  .nav {
+    width: 60%;
+  }
+  /* line 173, main.sass */
+  .nav li {
+    width: 25%;
+    text-align: center;
+  }
+
+  /* line 176, main.sass */
   .main {
     background-size: 400px auto, 100% 100%;
     background-position: bottom -80px left -35px, center center;
     min-height: 50vh;
   }
 
-  /* line 144, main.sass */
+  /* line 180, main.sass */
   .mainText {
-    margin-top: 7%;
+    margin-right: 15%;
+    margin-left: 15%;
+    margin-top: 10%;
   }
-  /* line 146, main.sass */
+  /* line 184, main.sass */
   .mainText p {
     font-size: 1.3em;
   }
-  /* line 148, main.sass */
+  /* line 186, main.sass */
   .mainText h1 {
     font-size: 3em;
     padding-top: 20px;
   }
 
-  /* line 152, main.sass */
-  #sec1 #imgSec1 {
+  /* line 190, main.sass */
+  #sec1 .textSec, #sec2 .textSec {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  /* line 193, main.sass */
+  #sec1 .imgSec, #sec2 .imgSec {
     margin-left: 25%;
     margin-right: 25%;
   }
+
+  /* line 197, main.sass */
+  .spaced {
+    padding-top: 30%;
+  }
 }
 @media screen and (min-width: 1280px) {
-  /* line 160, main.sass */
-  .mainText {
-    margin-top: 10%;
+  /* line 201, main.sass */
+  .navbar-default {
+    margin-right: 70px;
   }
-  /* line 162, main.sass */
+  /* line 203, main.sass */
+  .navbar-default .navbar-nav > li > a {
+    font-weight: bold;
+    color: white;
+    font-size: 1.5em;
+  }
+  /* line 207, main.sass */
+  .navbar-default .navbar-brand {
+    margin-top: -20px;
+    left: auto;
+    height: 100px;
+    margin-left: 0px;
+    padding-left: 5%;
+  }
+  /* line 213, main.sass */
+  .navbar-default .navbar-brand img {
+    height: 175%;
+    width: auto;
+    padding-left: 50px;
+  }
+
+  /* line 217, main.sass */
+  .mainText {
+    margin-top: 15%;
+    margin-right: 20%;
+    margin-left: 20%;
+  }
+  /* line 221, main.sass */
   .mainText p {
     font-size: 2em;
   }
-  /* line 164, main.sass */
+  /* line 223, main.sass */
   .mainText h1 {
     font-size: 3.5em;
     padding-top: 50px;
   }
 
-  /* line 167, main.sass */
+  /* line 226, main.sass */
   .main {
     background-size: 700px auto, 100% 100%;
     background-position: bottom -100px left -35px, center center;
     min-height: 100vh;
+  }
+
+  /* line 232, main.sass */
+  #sec1 .textSec, #sec2 .textSec {
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+  /* line 235, main.sass */
+  #sec1 .textSec h2, #sec2 .textSec h2 {
+    font-size: 3em;
+  }
+  /* line 237, main.sass */
+  #sec1 .textSec p, #sec2 .textSec p {
+    font-size: 1.5em;
+    margin-top: 50px;
+  }
+  /* line 240, main.sass */
+  #sec1 .imgSec, #sec2 .imgSec {
+    margin-top: 5%;
+    margin-left: 35%;
+    margin-right: 35%;
+  }
+  /* line 244, main.sass */
+  #sec1 .imgSec #ribbon, #sec2 .imgSec #ribbon {
+    transform: translate(0px, -80px);
+    transition: transform 0.5s ease-in;
+  }
+
+  /* line 247, main.sass */
+  .spaced {
+    padding-top: 10%;
   }
 }
