--- a/css/main.sass
+++ b/css/main.sass
@@ -79,10 +79,9 @@
 	p
 		color: white
 		font-size: 1em
-
-
-#sec1
-	#textSec1
+		
+#sec1,#sec2
+	.textSec
 		margin-top: 10%
 		margin-left: 5%
 		margin-right: 5%
@@ -94,12 +93,12 @@
 			color: #0078AA
 			span
 				color: #7AC943
-
 		p
 			text-align: center
 			line-height: 200%
 			color: #7f7f7f
-	#imgSec1
+
+	.imgSec
 		margin-left: 10%
 		margin-right: 10%
 		margin-top: 10%
@@ -113,10 +112,22 @@
 			transition: transform 0.5s ease-in
 
 
-		#omsMeat
-			position: absolute
+	#omsMeat
+		position: absolute
 
+.spaced
+	padding-top: 50%
 
+img.food
+	position: inline-block
+	max-width: 50%
+	height: auto
+	opacity: 0
+	transform: translateX(30px)
+	transition: all 0.4s ease-in-out
+	&.is-showing
+		opacity: 1
+		transform: translateX(0px)
 
 @media screen and (min-width: 768px)
 	.navbar-default
@@ -124,41 +135,89 @@
 		height: 100px
 		border-bottom: none
 		outline: none
+		padding-top: 50px
+		margin-right: 20px
 		.navbar-nav>li>a
 			color: white
+			font-size: 1em
+			&.first
+				border-top-left-radius: 20px
+			&:hover
+				box-shadow: inset 0 3px 9px rgba(0,0,0,0.5)
+			&:active
+				background-color: rgba(255,255,255,1)
+
 		.navbar-nav>.active>a
 			background-image: none
-			background-color: rgba(255,255,255,0.8)
+			background-color: rgba(255,255,255,0)
+			box-shadow: inset 0 3px 9px rgba(0,0,0,0.5)
+			&:hover
+				background-color: rgba(255,255,255,1)
 		.navbar-collapse
 			margin-top: 0px
 			background-color: transparent
+
 		.navbar-brand
+			margin-top: -20px
 			left: auto
 			height: 100px
 			margin-left: 0px
 			padding-left: 5%
+			img
+				height: 100%
+				width: auto
+				padding-left: 50px
+
+	.nav
+		width: 60%
+		li
+			width: 25%
+			text-align: center
 	.main
 		background-size: 400px auto, 100% 100%
 		background-position: bottom -80px left -35px, center center
 		min-height: 50vh
 	.mainText
-		margin-top: 7%
+		margin-right: 15%
+		margin-left: 15%
+		margin-top: 10%
 		p
 			font-size: 1.3em
 		h1
 			font-size: 3em
 			padding-top: 20px
-	#sec1
-		#imgSec1
+	#sec1,#sec2
+		.textSec
+			margin-left: 10%
+			margin-right: 10%
+		.imgSec
 			margin-left: 25%
 			margin-right: 25%
 
+	.spaced
+		padding-top: 30%
 
-
-@media screen and (min-width: 1280px)
-
+@media screen and (min-width: 1280px)	
+	.navbar-default
+		margin-right: 70px
+		.navbar-nav>li>a
+			font-weight: bold
+			color: white
+			font-size: 1.5em
+		.navbar-brand
+			margin-top: -20px
+			left: auto
+			height: 100px
+			margin-left: 0px
+			padding-left: 5%
+			img
+				height: 175%
+				width: auto
+				padding-left: 50px
 	.mainText
-		margin-top: 10%
+		margin-top: 15%
+		margin-right: 20%
+		margin-left: 20%
 		p
 			font-size: 2em
 		h1
@@ -168,3 +227,22 @@
 		background-size: 700px auto, 100% 100%
 		background-position: bottom -100px left -35px, center center
 		min-height: 100vh
+
+	#sec1,#sec2
+		.textSec
+			margin-left: 20%
+			margin-right: 20%
+			h2
+				font-size: 3em
+			p
+				font-size: 1.5em
+				margin-top: 50px		
+		.imgSec
+			margin-top: 5%
+			margin-left: 35%
+			margin-right: 35%
+			#ribbon
+				transform: translate(0px, -80px)
+				transition: transform 0.5s ease-in	
+	.spaced
+		padding-top: 10%
