--- a/index.jade
+++ b/index.jade
@@ -44,7 +44,7 @@ html.no-js(lang='')
           .navbar-collapse#bs-example-navbar-collapse-1.collapse
             ul.nav.navbar-nav.navbar-right
               li.active
-                a(href='#')
+                a(href='#').first
                   | Home 
                   span.sr-only (current)
               li
@@ -65,20 +65,34 @@ html.no-js(lang='')
                     a(href='#') Support us!
       .mainText
         p PolyBiome is an initiative to reduce the cancerigenous potential of red and processed meats using safe microorganisms.
-        h1 DISCOVER THE 
-          span REVOLUTION 
+        h1 LOREM IPSUM 
+          span SI AMET 
     #sec1
-      #textSec1
+      .textSec
         h2
           span One 
           |in every 33 
           span cancers 
           |is adscribed to processed or red meat. 
         p Acording to the World Health Organitzation Lorem ipsum Mollit incididunt nostrud consectetur sit aute dolore proident in est culpa consectetur officia enim veniam minim laborum in sint minim Excepteur eu in ullamco minim sed ex culpa consequat ad nulla in pariatur veniam quis laborum amet Ut in do dolore in culpa dolor.
-      #imgSec1
+      .imgSec
         img(src='img/ribbon.png').img-responsive#ribbon
         img(src='img/omsMeat.png').img-responsive#omsMeat
-      .tempDiv
+      .textSec.spaced
+        p Lorem ipsum Eiusmod culpa exercitation deserunt labore Duis magna deserunt ex magna consequat do exercitation nostrud et in id tempor cupidatat eiusmod commodo dolor in ut sit laborum tempor Duis. Lorem ipsum Sint elit minim ea adipisicing officia tempor officia est mollit nostrud amet eu culpa consequat anim voluptate pariatur voluptate ad mollit.
+      .imgSec
+        img(src='img/cow.png').food
+        img(src='img/pig.png').food   
+        img(src='img/bacon.png').food
+        img(src='img/lamb.png').food
+    hr 
+    #sec2
+      .textSec
+        h2
+          span Lorem ipsum 
+          |Culpa Ut anim culpa ut magna.
+        p Commodo Duis qui magna Duis ex incididunt culpa anim pariatur ut deserunt cupidatat qui officia irure ut consequat anim dolore reprehenderit ullamco in labore laboris consequat Ut in dolor deserunt irure quis sit fugiat.
+    .tempDiv
     script(script src="js/vendor/jquery-1.12.0.min.js")
     script(src='js/vendor/bootstrap.min.js')
     script(src="js/smooth-scroll.js")
