--- a/css/main.css
+++ b/css/main.css
@@ -87,69 +87,89 @@
 .mainText h1 {
   font-size: 2.5em;
   color: white;
-  font-family: Netto Offc;
+  font-weight: bold;
+  font-family: Netto Offc, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
-/* line 77, main.sass */
+/* line 78, main.sass */
 .mainText h1 span {
-  color: #7AC943;
+  color: #F7AC1E;
 }
-/* line 79, main.sass */
+/* line 80, main.sass */
 .mainText p {
   color: white;
   font-size: 1em;
 }
 
-/* line 84, main.sass */
+/* line 85, main.sass */
 #sec1 .textSec, #sec2 .textSec {
-  margin-top: 10%;
+  margin-top: 5%;
   margin-left: 5%;
   margin-right: 5%;
   text-align: center;
 }
-/* line 89, main.sass */
+/* line 90, main.sass */
 #sec1 .textSec h2, #sec2 .textSec h2 {
   font-size: 1.8em;
-  font-family: Netto Offc;
+  font-family: Netto Offc, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold;
   color: #0078AA;
 }
-/* line 94, main.sass */
+/* line 95, main.sass */
 #sec1 .textSec h2 span, #sec2 .textSec h2 span {
-  color: #7AC943;
+  color: #F7AC1E;
 }
-/* line 96, main.sass */
+/* line 97, main.sass */
 #sec1 .textSec p, #sec2 .textSec p {
   text-align: center;
   line-height: 200%;
   color: #7f7f7f;
 }
-/* line 101, main.sass */
+/* line 102, main.sass */
 #sec1 .imgSec, #sec2 .imgSec {
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 10%;
   position: relative;
 }
-/* line 106, main.sass */
+/* line 107, main.sass */
 #sec1 .imgSec #ribbon, #sec2 .imgSec #ribbon {
   position: absolute;
-  max-width: 30%;
+  max-width: 20%;
   height: auto;
-  left: 38%;
+  left: 40%;
   transform: translate(0px, -30px);
   transition: transform 0.5s ease-in;
 }
-/* line 115, main.sass */
+/* line 114, main.sass */
+#sec1 .imgSec #mol1, #sec2 .imgSec #mol1 {
+  transform: translate(-90px, 0px);
+  transition: transform 1s ease-in-out;
+}
+/* line 117, main.sass */
+#sec1 .imgSec #mol2, #sec2 .imgSec #mol2 {
+  transform: translate(90px, 0px);
+  transition: transform 1s ease-in-out;
+}
+/* line 120, main.sass */
+#sec1 .noOverflow, #sec2 .noOverflow {
+  overflow: hidden;
+}
+/* line 122, main.sass */
 #sec1 #omsMeat, #sec2 #omsMeat {
   position: absolute;
 }
 
-/* line 118, main.sass */
-.spaced {
+/* line 125, main.sass */
+.spacedTop {
   padding-top: 50%;
 }
 
-/* line 121, main.sass */
+/* line 127, main.sass */
+.spacedBottom {
+  padding-bottom: 10%;
+}
+
+/* line 130, main.sass */
 img.food {
   position: inline-block;
   max-width: 50%;
@@ -158,14 +178,25 @@ img.food {
   transform: translateX(30px);
   transition: all 0.4s ease-in-out;
 }
-/* line 128, main.sass */
+/* line 137, main.sass */
 img.food.is-showing {
   opacity: 1;
   transform: translateX(0px);
 }
 
+@media all and (orientation: landscape) {
+  /* line 144, main.sass */
+  .main {
+    min-height: 0px;
+  }
+
+  /* line 146, main.sass */
+  .mainText {
+    min-height: 150px;
+  }
+}
 @media screen and (min-width: 768px) {
-  /* line 133, main.sass */
+  /* line 152, main.sass */
   .navbar-default {
     background-color: transparent;
     height: 100px;
@@ -174,39 +205,45 @@ img.food.is-showing {
     padding-top: 50px;
     margin-right: 20px;
   }
-  /* line 140, main.sass */
+  /* line 159, main.sass */
   .navbar-default .navbar-nav > li > a {
     color: white;
     font-size: 1em;
   }
-  /* line 143, main.sass */
+  /* line 162, main.sass */
   .navbar-default .navbar-nav > li > a.first {
     border-top-left-radius: 20px;
   }
-  /* line 145, main.sass */
+  /* line 164, main.sass */
   .navbar-default .navbar-nav > li > a:hover {
     box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.5);
+    color: white;
   }
-  /* line 147, main.sass */
+  /* line 167, main.sass */
   .navbar-default .navbar-nav > li > a:active {
     background-color: white;
   }
-  /* line 150, main.sass */
+  /* line 169, main.sass */
+  .navbar-default .navbar-nav > li > a:visited {
+    color: white;
+  }
+  /* line 171, main.sass */
   .navbar-default .navbar-nav > .active > a {
     background-image: none;
     background-color: rgba(255, 255, 255, 0);
     box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.5);
+    color: white;
   }
-  /* line 154, main.sass */
+  /* line 176, main.sass */
   .navbar-default .navbar-nav > .active > a:hover {
     background-color: white;
   }
-  /* line 156, main.sass */
+  /* line 178, main.sass */
   .navbar-default .navbar-collapse {
     margin-top: 0px;
     background-color: transparent;
   }
-  /* line 160, main.sass */
+  /* line 182, main.sass */
   .navbar-default .navbar-brand {
     margin-top: -20px;
     left: auto;
@@ -214,74 +251,98 @@ img.food.is-showing {
     margin-left: 0px;
     padding-left: 5%;
   }
-  /* line 166, main.sass */
+  /* line 188, main.sass */
   .navbar-default .navbar-brand img {
     height: 100%;
     width: auto;
     padding-left: 50px;
   }
 
-  /* line 171, main.sass */
+  /* line 192, main.sass */
+  .dropdown-menu {
+    width: 100%;
+  }
+  /* line 194, main.sass */
+  .dropdown-menu .divider {
+    width: 100%;
+  }
+
+  /* line 196, main.sass */
   .nav {
     width: 60%;
   }
-  /* line 173, main.sass */
+  /* line 198, main.sass */
   .nav li {
     width: 25%;
     text-align: center;
   }
 
-  /* line 176, main.sass */
+  /* line 201, main.sass */
   .main {
     background-size: 400px auto, 100% 100%;
     background-position: bottom -80px left -35px, center center;
-    min-height: 50vh;
+    min-height: 75vh;
   }
 
-  /* line 180, main.sass */
+  /* line 205, main.sass */
   .mainText {
     margin-right: 15%;
     margin-left: 15%;
     margin-top: 10%;
   }
-  /* line 184, main.sass */
+  /* line 209, main.sass */
   .mainText p {
     font-size: 1.3em;
   }
-  /* line 186, main.sass */
+  /* line 211, main.sass */
   .mainText h1 {
     font-size: 3em;
     padding-top: 20px;
   }
 
-  /* line 190, main.sass */
-  #sec1 .textSec, #sec2 .textSec {
+  /* line 216, main.sass */
+  #sec1 .textSec h2, #sec2 .textSec h2 {
     margin-left: 10%;
     margin-right: 10%;
   }
-  /* line 193, main.sass */
+  /* line 219, main.sass */
+  #sec1 .textSec p, #sec2 .textSec p {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+  /* line 223, main.sass */
   #sec1 .imgSec, #sec2 .imgSec {
-    margin-left: 25%;
+    margin-left: 30%;
     margin-right: 25%;
   }
 
-  /* line 197, main.sass */
-  .spaced {
+  /* line 227, main.sass */
+  .spacedTop {
     padding-top: 30%;
   }
+
+  /* line 229, main.sass */
+  .spacedBottom {
+    padding-bottom: 10%;
+  }
 }
-@media screen and (min-width: 1280px) {
-  /* line 201, main.sass */
+@media all and (orientation: portrait) and (min-width: 768px) {
+  /* line 235, main.sass */
+  .main {
+    min-height: 50vh;
+  }
+}
+@media screen and (min-width: 1024px) {
+  /* line 241, main.sass */
   .navbar-default {
     margin-right: 70px;
   }
-  /* line 203, main.sass */
+  /* line 243, main.sass */
   .navbar-default .navbar-nav > li > a {
-    font-weight: bold;
     color: white;
     font-size: 1.5em;
   }
-  /* line 207, main.sass */
+  /* line 246, main.sass */
   .navbar-default .navbar-brand {
     margin-top: -20px;
     left: auto;
@@ -289,64 +350,81 @@ img.food.is-showing {
     margin-left: 0px;
     padding-left: 5%;
   }
-  /* line 213, main.sass */
+  /* line 252, main.sass */
   .navbar-default .navbar-brand img {
     height: 175%;
     width: auto;
     padding-left: 50px;
   }
 
-  /* line 217, main.sass */
+  /* line 257, main.sass */
   .mainText {
-    margin-top: 15%;
+    margin-top: 10%;
     margin-right: 20%;
     margin-left: 20%;
   }
-  /* line 221, main.sass */
+  /* line 261, main.sass */
   .mainText p {
     font-size: 2em;
   }
-  /* line 223, main.sass */
+  /* line 263, main.sass */
   .mainText h1 {
     font-size: 3.5em;
     padding-top: 50px;
   }
 
-  /* line 226, main.sass */
+  /* line 266, main.sass */
   .main {
     background-size: 700px auto, 100% 100%;
     background-position: bottom -100px left -35px, center center;
-    min-height: 100vh;
+    min-height: 80vh;
   }
 
-  /* line 232, main.sass */
-  #sec1 .textSec, #sec2 .textSec {
+  /* line 274, main.sass */
+  #sec1 .textSec h2, #sec2 .textSec h2 {
     margin-left: 20%;
     margin-right: 20%;
-  }
-  /* line 235, main.sass */
-  #sec1 .textSec h2, #sec2 .textSec h2 {
     font-size: 3em;
   }
-  /* line 237, main.sass */
+  /* line 278, main.sass */
   #sec1 .textSec p, #sec2 .textSec p {
+    margin-left: 25%;
+    margin-right: 25%;
     font-size: 1.5em;
     margin-top: 50px;
   }
-  /* line 240, main.sass */
+  /* line 283, main.sass */
   #sec1 .imgSec, #sec2 .imgSec {
     margin-top: 5%;
     margin-left: 35%;
     margin-right: 35%;
   }
-  /* line 244, main.sass */
+  /* line 287, main.sass */
   #sec1 .imgSec #ribbon, #sec2 .imgSec #ribbon {
     transform: translate(0px, -80px);
     transition: transform 0.5s ease-in;
   }
 
-  /* line 247, main.sass */
-  .spaced {
-    padding-top: 10%;
+  /* line 290, main.sass */
+  .spacedTop {
+    padding-top: 15%;
+  }
+
+  /* line 292, main.sass */
+  .spacedBottom {
+    padding-bottom: 5%;
+  }
+}
+@media all and (orientation: landscape) and (min-width: 768px) {
+  /* line 300, main.sass */
+  #sec1 .textSec p, #sec2 .textSec p {
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  /* line 308, main.sass */
+  .navbar-default .navbar-nav > li > a {
+    font-weight: bold;
   }
 }
