--- a/css/main.sass
+++ b/css/main.sass
@@ -73,26 +73,27 @@
 	h1
 		font-size: 2.5em
 		color: white
-		font-family: Netto Offc
+		font-weight: bold
+		font-family: Netto Offc,"Helvetica Neue",Helvetica,Arial,sans-serif
 		span
-			color: #7AC943
+			color: #F7AC1E
 	p
 		color: white
 		font-size: 1em
 		
 #sec1,#sec2
 	.textSec
-		margin-top: 10%
+		margin-top: 5%
 		margin-left: 5%
 		margin-right: 5%
 		text-align: center
 		h2
 			font-size: 1.8em
-			font-family: Netto Offc
+			font-family: Netto Offc,"Helvetica Neue",Helvetica,Arial,sans-serif
 			font-weight: bold
 			color: #0078AA
 			span
-				color: #7AC943
+				color: #F7AC1E
 		p
 			text-align: center
 			line-height: 200%
@@ -105,18 +106,26 @@
 		position: relative
 		#ribbon
 			position: absolute
-			max-width: 30%
+			max-width: 20%
 			height: auto
-			left: 38%
+			left: 40%
 			transform: translate(0px, -30px)
 			transition: transform 0.5s ease-in
-
-
+		#mol1
+			transform: translate(-90px, 0px)
+			transition: transform 1s ease-in-out
+		#mol2
+			transform: translate(90px, 0px)
+			transition: transform 1s ease-in-out
+	.noOverflow
+		overflow: hidden
 	#omsMeat
 		position: absolute
 
-.spaced
+.spacedTop
 	padding-top: 50%
+.spacedBottom
+	padding-bottom: 10%
 
 img.food
 	position: inline-block
@@ -128,7 +137,17 @@ img.food
 	&.is-showing
 		opacity: 1
 		transform: translateX(0px)
-
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+@media all and (orientation: landscape)
+	.main
+		min-height: 0px
+	.mainText
+		min-height: 150px
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 @media screen and (min-width: 768px)
 	.navbar-default
 		background-color: transparent
@@ -144,13 +163,16 @@ img.food
 				border-top-left-radius: 20px
 			&:hover
 				box-shadow: inset 0 3px 9px rgba(0,0,0,0.5)
+				color: white
 			&:active
 				background-color: rgba(255,255,255,1)
-
+			&:visited
+				color: white
 		.navbar-nav>.active>a
 			background-image: none
 			background-color: rgba(255,255,255,0)
 			box-shadow: inset 0 3px 9px rgba(0,0,0,0.5)
+			color: white
 			&:hover
 				background-color: rgba(255,255,255,1)
 		.navbar-collapse
@@ -167,7 +189,10 @@ img.food
 				height: 100%
 				width: auto
 				padding-left: 50px
-
+	.dropdown-menu
+		width: 100%
+		.divider
+			width: 100%
 	.nav
 		width: 60%
 		li
@@ -176,7 +201,7 @@ img.food
 	.main
 		background-size: 400px auto, 100% 100%
 		background-position: bottom -80px left -35px, center center
-		min-height: 50vh
+		min-height: 75vh
 	.mainText
 		margin-right: 15%
 		margin-left: 15%
@@ -188,20 +213,34 @@ img.food
 			padding-top: 20px
 	#sec1,#sec2
 		.textSec
-			margin-left: 10%
-			margin-right: 10%
+			h2
+				margin-left: 10%
+				margin-right: 10%
+			p
+				margin-left: 15%
+				margin-right: 15%
+
 		.imgSec
-			margin-left: 25%
+			margin-left: 30%
 			margin-right: 25%
 
-	.spaced
+	.spacedTop
 		padding-top: 30%
-
-@media screen and (min-width: 1280px)	
+	.spacedBottom
+		padding-bottom: 10%
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+@media all and (orientation:portrait) and (min-width: 768px)
+	.main
+		min-height: 50vh	
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+@media screen and (min-width: 1024px)
 	.navbar-default
 		margin-right: 70px
 		.navbar-nav>li>a
-			font-weight: bold
 			color: white
 			font-size: 1.5em
 		.navbar-brand
@@ -214,8 +253,9 @@ img.food
 				height: 175%
 				width: auto
 				padding-left: 50px
+
 	.mainText
-		margin-top: 15%
+		margin-top: 10%
 		margin-right: 20%
 		margin-left: 20%
 		p
@@ -226,15 +266,18 @@ img.food
 	.main
 		background-size: 700px auto, 100% 100%
 		background-position: bottom -100px left -35px, center center
-		min-height: 100vh
+		min-height: 80vh
 
 	#sec1,#sec2
 		.textSec
-			margin-left: 20%
-			margin-right: 20%
+
 			h2
+				margin-left: 20%
+				margin-right: 20%
 				font-size: 3em
 			p
+				margin-left: 25%
+				margin-right: 25%
 				font-size: 1.5em
 				margin-top: 50px		
 		.imgSec
@@ -244,5 +287,23 @@ img.food
 			#ribbon
 				transform: translate(0px, -80px)
 				transition: transform 0.5s ease-in	
-	.spaced
-		padding-top: 10%
+	.spacedTop
+		padding-top: 15%
+	.spacedBottom
+		padding-bottom: 5%
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+@media all and (orientation: landscape) and (min-width: 768px)
+	#sec1,#sec2
+		.textSec
+			p
+				margin-left: 20%
+				margin-right: 20%	
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+@media screen and (min-width: 1280px)
+	.navbar-default
+		.navbar-nav>li>a
+			font-weight: bold
