--- a/index.jade
+++ b/index.jade
@@ -64,9 +64,9 @@ html.no-js(lang='')
                   li
                     a(href='#') Support us!
       .mainText
-        p PolyBiome is an initiative to reduce the cancerigenous potential of red and processed meats using safe microorganisms.
-        h1 LOREM IPSUM 
-          span SI AMET 
+        p Meet PolyBiome, an initiative to reduce the cancerigenous potential of meeat using safe microorganisms in our body.
+        h1 DISCOVER THE 
+          span REVOLUTION
     #sec1
       .textSec
         h2
@@ -74,24 +74,31 @@ html.no-js(lang='')
           |in every 33 
           span cancers 
           |is adscribed to processed or red meat. 
-        p Acording to the World Health Organitzation Lorem ipsum Mollit incididunt nostrud consectetur sit aute dolore proident in est culpa consectetur officia enim veniam minim laborum in sint minim Excepteur eu in ullamco minim sed ex culpa consequat ad nulla in pariatur veniam quis laborum amet Ut in do dolore in culpa dolor.
+        p In an unprecedented 
+          span
+            a(href='http://www.who.int/mediacentre/news/statements/2015/processed-meat-cancer/') statement
+          |, the World Health Organitzation announced in October 2015 their concern in reference to recent studies by the International Agency for Research on Cancer (IARC) which related processed and red meat intake with colorectal cancer.
+
       .imgSec
-        img(src='img/ribbon.png').img-responsive#ribbon
+        img(src='img/ribbonOrange.png').img-responsive#ribbon
         img(src='img/omsMeat.png').img-responsive#omsMeat
-      .textSec.spaced
-        p Lorem ipsum Eiusmod culpa exercitation deserunt labore Duis magna deserunt ex magna consequat do exercitation nostrud et in id tempor cupidatat eiusmod commodo dolor in ut sit laborum tempor Duis. Lorem ipsum Sint elit minim ea adipisicing officia tempor officia est mollit nostrud amet eu culpa consequat anim voluptate pariatur voluptate ad mollit.
-      .imgSec
+      .textSec.spacedTop
+        p The studies found that 21% of bowel cancers are caused by processed or red meat, which acounts for a 3% of the total world cancers. In the Carcinogenic Groups classification processed meats rank now in the first risk group, and red meats in the second.
+      .imgSec.spacedBottom
         img(src='img/cow.png').food
         img(src='img/pig.png').food   
         img(src='img/bacon.png').food
-        img(src='img/lamb.png').food
-    hr 
+        img(src='img/lamb.png',style="max-width: 40%; margin-left:20px").food
+    hr
     #sec2
       .textSec
         h2
-          span Lorem ipsum 
-          |Culpa Ut anim culpa ut magna.
-        p Commodo Duis qui magna Duis ex incididunt culpa anim pariatur ut deserunt cupidatat qui officia irure ut consequat anim dolore reprehenderit ullamco in labore laboris consequat Ut in dolor deserunt irure quis sit fugiat.
+          span Polyamines 
+          | are the main responsibles of the meat cancerigenous potential.
+        p These small molecules are involved in processes such as cell proliferation, and are, in small quantities, essential for our bodies. However, if there is a desequilibrium in their quantity, for example, due to coninious meat intake, polyamines can upregulate proliferation, increasing cancer risk and becoming perjudicial for our health.
+      .imgSec.noOverflow
+        img(src='img/mol1.png').img-responsive#mol1
+        img(src='img/mol2.png').img-responsive#mol2
     .tempDiv
     script(script src="js/vendor/jquery-1.12.0.min.js")
     script(src='js/vendor/bootstrap.min.js')
